<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Runtotheshelter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Select your destination</string>
    <string name="destination_button">Done</string>
    <string name="title_activity_options">Options</string>
    <string name="action_settings">Settings</string>
    <string name="minute_text">Detonation Time:</string>
    <string name="minute">MM</string>
    <string name="startaddress">Start Address:</string>
    <string name="destinationaddress">Destination:</string>
    <string name="distance">Distance:</string>
    <string name="launch_button">LAUNCH!</string>
    <string name="title_activity_running">Running</string>
    <string name="timer">00:00</string>
    <string name="title_activity_score">ScoreActivity</string>
 	<string name="restart">Try Again?</string>
</resources>